--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,7 @@
 <body>
   <div class="root">
     <header class="header root__section">
-            <!-- <%=require('./images/logo.svg')%>  -->
-      <img src="./images/logo.svg" alt="mesto logo" class="logo">
+      <img src="<%= require('images/logo.svg') %>" alt="mesto logo" class="logo">
     </header>
     <div class="profile root__section">
       <div class="user-info">
