--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="root">
     <header class="header root__section">
-      <img src="[object Module]" alt="mesto logo" class="logo">
+      <img src="./images/logo.svg" alt="mesto logo" class="logo">
     </header>
     <div class="profile root__section">
       <div class="user-info">
@@ -26,7 +26,8 @@
     <div class="places-list root__section">
     </div>
   </div>
-  <script type="module" src="main.e71806193a77eabeeb03.js"></script>
+  <script type="module" src="main.54fad5436f81ce9f4536.js"></script>
 
 </body>
+
 </html>
