--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="root">
     <header class="header root__section">
-      <img src="./images/logo.svg" alt="mesto logo" class="logo">
+      <img src="[object Module]" alt="mesto logo" class="logo">
     </header>
     <div class="profile root__section">
       <div class="user-info">
@@ -27,7 +27,5 @@
     </div>
   </div>
   <script type="module" src="main.54fad5436f81ce9f4536.js"></script>
-
 </body>
-
 </html>
