--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="root">
     <header class="header root__section">
-      <img src="<%= require('images/logo.svg') %>" alt="mesto logo" class="logo">
+      <img src="<%= require('./images/logo.svg') %>" alt="mesto logo" class="logo">
     </header>
     <div class="profile root__section">
       <div class="user-info">
@@ -27,6 +27,5 @@
     </div>
   </div>
   <script type="module" src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
-
 </body>
 </html>
